2004-09-01  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/kaffe-gc/gc-mem.h: 
	(ROUNDUPPAGESIZE, GCBLOCK2BASE, gc_pgsize)
	Removed.
	
	* kaffe/kaffevm/kaffe-gc/gc-mem.c: 
	(ROUNDUPPAGESIZE, GCBLOCK2BASE) Moved here.
	(gc_pgsize) Made static.

	Reported by: Michael Franz <developer.franz@verizon.net>

2004-08-31	jrandom <jrandom@i2p.net>

	* kaffe/kaffevm/systems/unix-jthreads/jthread.c:
	(handleInterrupt): Dump the threads on SIGUSR2.
	(dumpJavaThreadLocal): Added.
	(dumpThreadsLocal): Added.
	(handleIO): Avoid a hang by limiting the maximum wait.

	* kaffe/kaffevm/systems/unix-jthreads/signal.c:
	(registerAsyncSignalHandler): accept SIGUSR2

2004-08-31	jrandom <jrandom@i2p.net>

	* kaffe/kaffevm/systems/unix-jthreads/signal.c:
	(nullException): Removed obsolete Kaffe-GC dependency on FreeBSD.

2004-08-31  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/locks.c
	(getHeavyLock): Marked "*lkp" as volatile. Use LOCKFREE instead of 0
	for clarity.
	(slowLockMutex, locks_internal_waitCond): Cast explicitly 0 to jlong.

2004-08-31  Dalibor Topic  <robilad@kaffe.org>

	Fix for static builds on netbsd.

	* configure.ac: disable -Wuninitialized.

	* configure: Regenerated.

	Reported by: Kiyo Inaba  <inaba@src.ricoh.co.jp>,
		     Guilhem Lavaux  <guilhem@kaffe.org>,
		     Riccardo Mottola <rmottola@users.sf.net>

2004-08-31  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/kaffe-gc/gc-mem.c: 
	(gc_heap_initial_size) Made static.

	Reported by: Michael Franz <developer.franz@verizon.net>

2004-08-31  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/kaffe-gc/gc-mem.h: 
	(gc_heap_allocation_size) Removed declaration.
	
	* kaffe/kaffevm/kaffe-gc/gc-mem.c: 
	(gc_heap_allocation_size) Made static.

	Reported by: Michael Franz <developer.franz@verizon.net>

2004-08-31  Dalibor Topic  <robilad@kaffe.org>

	* kaffe/kaffevm/kaffe-gc/gc-incremental.c:
	(gcStats) Moved over here and made static.
	(garbageman) Made static.
