@@ -1,5 +1,13 @@
 2004-09-01  Dalibor Topic  <robilad@kaffe.org>
 
+	* kaffe/kaffevm/kaffe-gc/gc-mem.h (KGC_OBJECT_SIZE): 
+	Removed.
+	
+	* kaffe/kaffevm/kaffe-gc/gc-mem.c (KGC_OBJECT_SIZE): 
+	Moved over here.
+
+2004-09-01  Dalibor Topic  <robilad@kaffe.org>
+
 	* kaffe/kaffevm/kaffe-gc/gc-mem.h: 
 	(ROUNDUPPAGESIZE, GCBLOCK2BASE, gc_pgsize)
 	Removed.
